@@ -8,6 +8,7 @@ import com.rofix.fitspot.webservice.api.user.repository.CodyClothesRepository;
 import com.rofix.fitspot.webservice.api.user.repository.CodyRepository;
 import com.rofix.fitspot.webservice.api.user.util.ColorMatchingUtil;
 import lombok.extern.slf4j.Slf4j;
+import lombok.Getter;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -15,12 +16,13 @@ import org.springframework.transaction.annotation.Transactional;
 import java.security.MessageDigest;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 @Transactional
 public class CodyRecommendationService {
+
+    private static final int MAX_CODY_COUNT = 3;
 
     @Autowired
     private ClothingRepository clothingRepository;
@@ -39,35 +41,40 @@ public class CodyRecommendationService {
                 request.getUserId(), request.getWeather(), request.getPersonalColor());
 
         try {
-            // 1. 기존 코디가 있는지 확인 (force=false인 경우)
+            // 기존 코디 확인
             if (!request.getForce()) {
                 Optional<Cody> existingCody = findExistingCody(request);
                 if (existingCody.isPresent()) {
                     log.info("기존 코디 재사용: {}", existingCody.get().getCodyId());
-                    return createResponse(List.of(existingCody.get()), false);
+                    return createResponse(List.of(existingCody.get()));
                 }
             }
 
-            // 2. 의상 후보 조회 및 필터링
-            CandidateClothes candidates = getCandidateClothes(request);
-
-            // 3. Fallback 체크
-            if (candidates.tops.isEmpty() || candidates.bottoms.isEmpty()) {
-                log.warn("충분한 의상이 없어 추천 실패 - TOP: {}, BOTTOM: {}",
-                        candidates.tops.size(), candidates.bottoms.size());
-                return new CodyRecommendationResponse(new ArrayList<>(), true);
-            }
-
-            // 4. 코디 조합 생성
-            List<Cody> newCodys = generateCodyCombinations(request, candidates);
-
+            // 코디 생성
+            List<Cody> newCodys = generateNewCodys(request);
             log.info("코디 추천 완료 - 생성된 코디 수: {}", newCodys.size());
-            return createResponse(newCodys, false);
+
+            return createResponse(newCodys);
 
         } catch (Exception e) {
             log.error("코디 추천 중 오류 발생", e);
-            return new CodyRecommendationResponse(new ArrayList<>(), true);
+            return createFallbackResponse();
         }
+    }
+
+    /**
+     * 새로운 코디 생성
+     */
+    private List<Cody> generateNewCodys(CodyRecommendationRequest request) {
+        ClothingCandidates candidates = getClothingCandidates(request);
+
+        if (candidates.isEmpty()) {
+            log.warn("충분한 의상이 없어 추천 실패 - TOP: {}, BOTTOM: {}",
+                    candidates.tops.size(), candidates.bottoms.size());
+            return Collections.emptyList();
+        }
+
+        return createCodyCombinations(request, candidates);
     }
 
     /**
@@ -82,162 +89,171 @@ public class CodyRecommendationService {
     /**
      * 후보 의상 조회
      */
-    private CandidateClothes getCandidateClothes(CodyRecommendationRequest request) {
-        CandidateClothes candidates = new CandidateClothes();
+    private ClothingCandidates getClothingCandidates(CodyRecommendationRequest request) {
+        ClothingCandidates candidates = new ClothingCandidates();
 
-        // TOP 카테고리 의상 조회
-        candidates.tops = getFilteredClothes(request, "TOP");
+        candidates.tops = getFilteredClothes(request, ClothingCategory.TOP);
+        candidates.bottoms = getFilteredClothes(request, ClothingCategory.BOTTOM);
+        candidates.shoes = getFilteredClothes(request, ClothingCategory.SHOES);
 
-        // BOTTOM 카테고리 의상 조회
-        candidates.bottoms = getFilteredClothes(request, "BOTTOM");
-
-        // OUTER 카테고리 의상 조회 (조건부)
         if (shouldIncludeOuter(request.getWeather())) {
-            candidates.outers = getFilteredClothes(request, "OUTER");
+            candidates.outers = getFilteredClothes(request, ClothingCategory.OUTER);
         }
 
+        logCandidatesSummary(candidates);
         return candidates;
     }
 
     /**
      * 카테고리별 필터링된 의상 조회
      */
-    private List<Clothing> getFilteredClothes(CodyRecommendationRequest request, String category) {
-        // 1. 날씨에 맞는 의상 우선 조회
+    private List<Clothing> getFilteredClothes(CodyRecommendationRequest request, ClothingCategory category) {
         List<Clothing> clothes = clothingRepository.findByUserIdAndCategoryAndWeather(
-                request.getUserId(), category, request.getWeather());
+                request.getUserId(), category.name(), request.getWeather());
 
-        // 2. 부족할 경우 전체 카테고리에서 추가 조회
-        if (clothes.size() < 3) {
-            List<Clothing> allCategoryClothes = clothingRepository.findByUserIdAndCategory(
-                    request.getUserId(), category);
-
-            // 중복 제거하여 추가
-            Set<Long> existingIds = clothes.stream()
-                    .map(Clothing::getClothingId)
-                    .collect(Collectors.toSet());
-
-            allCategoryClothes.stream()
-                    .filter(c -> !existingIds.contains(c.getClothingId()))
-                    .limit(5 - clothes.size())
-                    .forEach(clothes::add);
-        }
-
-        // 3. 퍼스널 컬러 필터링 및 정렬
         return clothes.stream()
-                .filter(clothing -> ColorMatchingUtil.isColorMatched(
-                        request.getPersonalColor(), clothing.getColor()))
-                .sorted((c1, c2) -> {
-                    // 날씨 매칭 우선순위
-                    int weatherScore1 = request.getWeather().equals(c1.getWeather()) ? 10 : 0;
-                    int weatherScore2 = request.getWeather().equals(c2.getWeather()) ? 10 : 0;
-
-                    // 색상 매칭 점수
-                    int colorScore1 = ColorMatchingUtil.calculateColorMatchScore(
-                            request.getPersonalColor(), c1.getColor());
-                    int colorScore2 = ColorMatchingUtil.calculateColorMatchScore(
-                            request.getPersonalColor(), c2.getColor());
-
-                    int totalScore1 = weatherScore1 + colorScore1;
-                    int totalScore2 = weatherScore2 + colorScore2;
-
-                    if (totalScore1 != totalScore2) {
-                        return Integer.compare(totalScore2, totalScore1); // 높은 점수 우선
-                    }
-
-                    // 최근 생성순
-                    return c2.getCreatedAt().compareTo(c1.getCreatedAt());
-                })
-                .limit(5) // 상위 5개만 선택
-                .collect(Collectors.toList());
+                .filter(clothing -> isPersonalColorMatched(request.getPersonalColor(), clothing.getColor()))
+                .toList();
     }
 
     /**
-     * OUTER 포함 여부 결정
+     * 퍼스널컬러 매칭 확인
+     */
+    private boolean isPersonalColorMatched(String personalColor, String clothingColor) {
+        return ColorMatchingUtil.isColorMatched(personalColor, clothingColor);
+    }
+
+    /**
+     * 아우터 포함 여부 결정
      */
     private boolean shouldIncludeOuter(String weather) {
-        // 온도 고려 없이 날씨만으로 판단
-        return "RAIN".equalsIgnoreCase(weather) || "COLD".equalsIgnoreCase(weather);
+        return WeatherType.RAIN.matches(weather) || WeatherType.COLD.matches(weather);
     }
 
     /**
      * 코디 조합 생성
      */
-    private List<Cody> generateCodyCombinations(CodyRecommendationRequest request,
-                                                CandidateClothes candidates) {
+    private List<Cody> createCodyCombinations(CodyRecommendationRequest request, ClothingCandidates candidates) {
         List<Cody> generatedCodys = new ArrayList<>();
 
-        // 최대 6가지 조합 생성
-        int maxCombinations = Math.min(6, candidates.tops.size() * candidates.bottoms.size());
+        for (Clothing top : candidates.tops) {
+            for (Clothing bottom : candidates.bottoms) {
+                if (generatedCodys.size() >= MAX_CODY_COUNT) break;
 
-        for (int i = 0; i < maxCombinations && i < candidates.tops.size(); i++) {
-            for (int j = 0; j < Math.min(2, candidates.bottoms.size()); j++) {
-                Clothing top = candidates.tops.get(i);
-                Clothing bottom = candidates.bottoms.get(j);
-                Clothing outer = (!candidates.outers.isEmpty() && i < candidates.outers.size())
-                        ? candidates.outers.get(i) : null;
+                for (Clothing shoe : getShoeOptions(candidates.shoes)) {
+                    if (generatedCodys.size() >= MAX_CODY_COUNT) break;
 
-                // 해시 생성으로 중복 확인
-                String hash = generateHash(request.getUserId(), request.getWeather(), request.getPersonalColor(),
-                        Arrays.asList(top.getClothingId(), bottom.getClothingId(),
-                                outer != null ? outer.getClothingId() : null));
+                    Clothing outer = getOuterForCombination(candidates.outers, generatedCodys.size());
+                    Cody cody = createOrFindCody(request, top, bottom, outer, shoe);
 
-                Optional<Cody> existingCody = codyRepository.findByHash(hash);
-                if (existingCody.isPresent()) {
-                    generatedCodys.add(existingCody.get());
-                    continue;
+                    if (cody != null) {
+                        generatedCodys.add(cody);
+                    }
                 }
-
-                // 새 코디 생성
-                Cody newCody = createNewCody(request, top, bottom, outer, hash);
-                generatedCodys.add(newCody);
-
-                if (generatedCodys.size() >= 3) break; // 최대 3개
             }
-            if (generatedCodys.size() >= 3) break;
         }
 
         return generatedCodys;
     }
 
     /**
+     * 신발 옵션 가져오기
+     */
+    private List<Clothing> getShoeOptions(List<Clothing> shoes) {
+        return shoes.isEmpty() ? Arrays.asList((Clothing) null) : shoes;
+    }
+
+    /**
+     * 조합에 맞는 아우터 선택
+     */
+    private Clothing getOuterForCombination(List<Clothing> outers, int index) {
+        return (!outers.isEmpty() && index < outers.size()) ? outers.get(index) : null;
+    }
+
+    /**
+     * 코디 생성 또는 기존 코디 찾기
+     */
+    private Cody createOrFindCody(CodyRecommendationRequest request, Clothing top, Clothing bottom,
+                                  Clothing outer, Clothing shoe) {
+        String hash = generateCodyHash(request, top, bottom, outer, shoe);
+
+        Optional<Cody> existingCody = codyRepository.findByHash(hash);
+        if (existingCody.isPresent()) {
+            return existingCody.get();
+        }
+
+        return createNewCody(request, top, bottom, outer, shoe, hash);
+    }
+
+    /**
      * 새 코디 생성
      */
     private Cody createNewCody(CodyRecommendationRequest request, Clothing top, Clothing bottom,
-                               Clothing outer, String hash) {
-        User user = new User();
-        user.setUserId(request.getUserId());
-
-        Cody cody = new Cody();
-        cody.setUser(user);
-        cody.setWeather(request.getWeather());
-        cody.setTitle(generateTitle(top, bottom, outer));
-        cody.setDescription(generateDescription(top, bottom, outer, request.getWeather()));
-        cody.setCreatedAt(LocalDateTime.now());
-        cody.setHash(hash);
-
-        // 코디 저장
+                               Clothing outer, Clothing shoe, String hash) {
+        Cody cody = buildCodyEntity(request, top, bottom, outer, shoe, hash);
         Cody savedCody = codyRepository.save(cody);
 
-        // 코디-의상 관계 저장
-        saveCodyClothes(savedCody, top);
-        saveCodyClothes(savedCody, bottom);
-        if (outer != null) {
-            saveCodyClothes(savedCody, outer);
-        }
+        saveCodyClothesRelations(savedCody, top, bottom, outer, shoe);
 
         log.info("새 코디 생성 완료: {} - {}", savedCody.getCodyId(), savedCody.getTitle());
         return savedCody;
     }
 
     /**
+     * 코디 엔티티 구성
+     */
+    private Cody buildCodyEntity(CodyRecommendationRequest request, Clothing top, Clothing bottom,
+                                 Clothing outer, Clothing shoe, String hash) {
+        User user = new User();
+        user.setUserId(request.getUserId());
+
+        Cody cody = new Cody();
+        cody.setUser(user);
+        cody.setWeather(request.getWeather());
+        cody.setTitle(generateCodyTitle(top, bottom, outer, shoe));
+        cody.setDescription(generateCodyDescription(top, bottom, outer, shoe, request.getWeather()));
+        cody.setCreatedAt(LocalDateTime.now());
+        cody.setHash(hash);
+
+        return cody;
+    }
+
+    /**
+     * 코디-의상 관계 저장
+     */
+    private void saveCodyClothesRelations(Cody cody, Clothing top, Clothing bottom, Clothing outer, Clothing shoe) {
+        saveCodyClothes(cody, top);
+        saveCodyClothes(cody, bottom);
+        saveCodyClothes(cody, outer);
+        saveCodyClothes(cody, shoe);
+    }
+
+    /**
      * 코디-의상 관계 저장
      */
     private void saveCodyClothes(Cody cody, Clothing clothing) {
+        if (clothing == null) return;
+
         CodyClothes codyClothes = new CodyClothes();
         codyClothes.setCody(cody);
         codyClothes.setClothing(clothing);
         codyClothesRepository.save(codyClothes);
+    }
+
+    /**
+     * 코디 해시 생성
+     */
+    private String generateCodyHash(CodyRecommendationRequest request, Clothing top, Clothing bottom,
+                                    Clothing outer, Clothing shoe) {
+        List<Long> clothingIds = Arrays.asList(
+                top.getClothingId(),
+                bottom.getClothingId(),
+                outer != null ? outer.getClothingId() : null,
+                shoe != null ? shoe.getClothingId() : null
+        );
+
+        return generateHash(request.getUserId(), request.getWeather(),
+                           request.getPersonalColor(), clothingIds);
     }
 
     /**
@@ -248,7 +264,7 @@ public class CodyRecommendationService {
             List<Long> sortedIds = clothingIds.stream()
                     .filter(Objects::nonNull)
                     .sorted()
-                    .collect(Collectors.toList());
+                    .toList();
 
             String input = userId + "|" + weather + "|" + personalColor + "|" + sortedIds;
 
@@ -267,36 +283,33 @@ public class CodyRecommendationService {
     }
 
     /**
-     * 코디 제목 자동 생성
+     * 코디 제목 생성
      */
-    private String generateTitle(Clothing top, Clothing bottom, Clothing outer) {
-        StringBuilder title = new StringBuilder();
+    private String generateCodyTitle(Clothing top, Clothing bottom, Clothing outer, Clothing shoe) {
+        List<String> titleParts = new ArrayList<>();
 
-        if (outer != null) {
-            title.append(outer.getTitle()).append(" + ");
-        }
-        title.append(top.getTitle()).append(" + ").append(bottom.getTitle());
+        if (outer != null) titleParts.add(outer.getTitle());
+        titleParts.add(top.getTitle());
+        titleParts.add(bottom.getTitle());
+        if (shoe != null) titleParts.add(shoe.getTitle());
 
-        return title.toString();
+        return String.join(" + ", titleParts);
     }
 
     /**
-     * 코디 설명 자동 생성
+     * 코디 설명 생성
      */
-    private String generateDescription(Clothing top, Clothing bottom, Clothing outer, String weather) {
+    private String generateCodyDescription(Clothing top, Clothing bottom, Clothing outer, Clothing shoe, String weather) {
         StringBuilder desc = new StringBuilder();
         desc.append(getWeatherDescription(weather));
 
-        // 색상 조합
         Set<String> colors = new HashSet<>();
         colors.add(top.getColor());
         colors.add(bottom.getColor());
-        if (outer != null) {
-            colors.add(outer.getColor());
-        }
+        if (outer != null) colors.add(outer.getColor());
+        if (shoe != null) colors.add(shoe.getColor());
 
         desc.append(" ").append(String.join(", ", colors)).append(" 컬러 조합의 코디입니다.");
-
         return desc.toString();
     }
 
@@ -304,47 +317,34 @@ public class CodyRecommendationService {
      * 날씨 설명 문구 반환
      */
     private String getWeatherDescription(String weather) {
-        switch (weather != null ? weather.toUpperCase() : "SUNNY") {
-            case "RAIN": return "비 오는 날씨에 적합한";
-            case "COLD": return "추운 날씨에 따뜻한";
-            case "HOT": return "더운 날씨에 시원한";
-            default: return "맑은 날씨에 어울리는";
-        }
+        return WeatherType.fromString(weather).getDescription();
     }
 
     /**
      * 응답 생성
      */
-    private CodyRecommendationResponse createResponse(List<Cody> codys, boolean fallback) {
+    private CodyRecommendationResponse createResponse(List<Cody> codys) {
         List<CodyRecommendationResponse.RecommendedCody> recommendedCodys = codys.stream()
                 .map(this::convertToCodyResponse)
-                .collect(Collectors.toList());
+                .toList();
 
-        return new CodyRecommendationResponse(recommendedCodys, fallback);
+        return new CodyRecommendationResponse(recommendedCodys, false);
+    }
+
+    /**
+     * 폴백 응답 생성
+     */
+    private CodyRecommendationResponse createFallbackResponse() {
+        return new CodyRecommendationResponse(new ArrayList<>(), true);
     }
 
     /**
      * Cody 엔티티를 응답 DTO로 변환
      */
     private CodyRecommendationResponse.RecommendedCody convertToCodyResponse(Cody cody) {
-        // 좋아요 수 계산
         long likeCount = cody.getLikes() != null ? cody.getLikes().size() : 0;
-
-        // 코디에 포함된 의상들 조회
         List<CodyClothes> codyClothes = codyClothesRepository.findByCodyCodyId(cody.getCodyId());
-        List<CodyRecommendationResponse.RecommendedCody.CodyItem> items = codyClothes.stream()
-                .map(cc -> {
-                    Clothing clothing = cc.getClothing();
-                    return new CodyRecommendationResponse.RecommendedCody.CodyItem(
-                            clothing.getClothingId(),
-                            clothing.getCategory(),
-                            clothing.getTitle(),
-                            clothing.getColor(),
-                            clothing.getImageUrl(),
-                            clothing.getBrand()
-                    );
-                })
-                .collect(Collectors.toList());
+        List<CodyRecommendationResponse.RecommendedCody.CodyItem> items = convertToCodyItems(codyClothes);
 
         return new CodyRecommendationResponse.RecommendedCody(
                 cody.getCodyId(),
@@ -358,11 +358,82 @@ public class CodyRecommendationService {
     }
 
     /**
+     * 코디에 포함된 의상들을 CodyItem 리스트로 변환
+     */
+    private List<CodyRecommendationResponse.RecommendedCody.CodyItem> convertToCodyItems(List<CodyClothes> codyClothes) {
+        return codyClothes.stream()
+                .map(cc -> {
+                    Clothing clothing = cc.getClothing();
+                    return new CodyRecommendationResponse.RecommendedCody.CodyItem(
+                            clothing.getClothingId(),
+                            clothing.getCategory(),
+                            clothing.getTitle(),
+                            clothing.getColor(),
+                            clothing.getImageUrl(),
+                            clothing.getBrand()
+                    );
+                })
+                .toList();
+    }
+
+    /**
+     * 후보 의상 정보 로깅
+     */
+    private void logCandidatesSummary(ClothingCandidates candidates) {
+        log.info("후보 의상 수 - TOP: {}, BOTTOM: {}, OUTER: {}, SHOES: {}",
+                candidates.tops.size(), candidates.bottoms.size(),
+                candidates.outers.size(), candidates.shoes.size());
+    }
+
+    /**
      * 후보 의상들을 담는 내부 클래스
      */
-    private static class CandidateClothes {
+    private static class ClothingCandidates {
         List<Clothing> tops = new ArrayList<>();
         List<Clothing> bottoms = new ArrayList<>();
         List<Clothing> outers = new ArrayList<>();
+        List<Clothing> shoes = new ArrayList<>();
+
+        boolean isEmpty() {
+            return tops.isEmpty() || bottoms.isEmpty();
+        }
+    }
+
+    /**
+     * 의상 카테고리 열거형
+     */
+    private enum ClothingCategory {
+        TOP, BOTTOM, OUTER, SHOES
+    }
+
+    /**
+     * 날씨 타입 열거형
+     */
+    @Getter
+    private enum WeatherType {
+        RAIN("비 오는 날씨에 적합한"),
+        COLD("추운 날씨에 따뜻한"),
+        HOT("더운 날씨에 시원한"),
+        SUNNY("맑은 날씨에 어울리는"),
+        CLOUDY("흐린 날씨에 어울리는");
+
+        private final String description;
+
+        WeatherType(String description) {
+            this.description = description;
+        }
+
+
+        public boolean matches(String weather) {
+            return this.name().equalsIgnoreCase(weather);
+        }
+
+        public static WeatherType fromString(String weather) {
+            try {
+                return valueOf(weather.toUpperCase());
+            } catch (IllegalArgumentException e) {
+                return SUNNY; // 기본값
+            }
+        }
     }
 }
